--- a/BookReader/Properties/launchSettings.json
+++ b/BookReader/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "BookReader": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/parsehtml",
+      "launchUrl": "swagger/index.html",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
