--- a/BookReader/BookReader.csproj
+++ b/BookReader/BookReader.csproj
@@ -13,4 +13,7 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-rc5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="IServices\" />
+  </ItemGroup>
 </Project>
